@@ -124,6 +124,7 @@ Version 0.91.0:
 - #assert inside #if 0 blocks caused a syntax error
 - PP typeof()'s argument was not being macro-expanded properly (e.g. the x in <#if typeof(x) = ...>)
 - Macro expansion right behind a PP typeof() wasn't working (e.g. the foo in <#if typeof(x) foo>)
+- Crash (division by zero) when PRINTing onto tiny graphics screens (e.g. screenres 1, 1)
 
 
 Version 0.90.1:
